# Nexus-System

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  backup.py  check_imap.py  diagnose_imap.py  docker-compose.yml  fix_sequences.py  import_rpwdl.py  init_db.py  main.py  merge_backup_data.py  migrate_add_model_columns.py  pyproject.toml  recover_leads.py  restore.py  revert_drafts.py  scratch.py  setup_nocodb_names.py  start.sh  sync_cache_to_db.py  test_imap_folders.py  test_imap_quick.py  test_queue_manager.py  tmp_inspect_db.py
.streamlit/: config.toml
NexusAgent/: package.json
NexusAgent/src/components/: ContactSection.astro  CookieConsent.astro  CtaSection.astro  FaqSection.astro  Footer.astro  Header.astro  HeroSection.astro  OnboardingFlow.svelte  PainSection.astro  PaymentErrorCard.svelte  PipelineSection.astro  PricingInteractive.svelte  PricingSection.astro  (+5 more)
app/: alerts.py  backup_manager.py  brief_sync.py  cache_manager.py  critical_monitor.py  database.py  kms_client.py  krs_api.py  memory_utils.py  model_factory.py  queue_manager.py  rate_limiter.py  redis_client.py  rodo_manager.py  scheduler.py  schemas.py  stats_manager.py  tools.py  warmup.py
app/agents/: inbox.py  researcher.py  scout.py  sender.py  strategy.py  teacher.py  writer.py
context/: 00_system_prompt.md  01_architecture.md  02_coding_standards.md  03_agent_protocols.md  04_current_objectives.md  05_saas_legal_architecture.md  Poprawa_rodo.md  apify.md  audit.md  docs.md  nexus_teacher_implementation.md  stats.md  weryfikacja_prawa.md
gui/: dashboard.py
(+32 files in other folders)
